<resources>
    <string name="app_name">TravelEverywhere</string>
    <string name="Hello_for_better_service">你好,为了更好的为你服务</string>
    <string name="add86">+86</string>
    <string name="Please_enter_phone_number">请输入手机号</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="Login_or_registration">登录或注册即同意到处旅行用户协议</string>
    <string name="user_agreement">用户协议</string>
    <string name="Please_log_in_and_travel_around">请登录到处旅行</string>
    <string name="or">or</string>
    <string name="wechat_login">微信登录</string>
    <string name="For_the_security_of_your_account">为了您的账号安全</string>
    <string name="Please_bind_your_mobile_phone_number">请绑定手机号</string>
    <string name="To_resend">重新发送(59s)</string>
    <string name="Please_enter_the_verification_code">请输入验证码</string>
    <string name="unknow_error">为知错误</string>
    <string name="conn_error">连接错误</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络出错</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">网络不能使用</string>
    <string name="Please_later">请稍后...</string>
    <string name="infrom">通知</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">消息</string>
    <string name="system_inform">系统通知</string>
    <string name="time">09/5/3</string>
    <string name="register_success">注册成功</string>
    <string name="oauth_error">授权失败</string>
    <string name="oauth_cancel">授权取消</string>
    <string name="login_success">登录成功</string>
    <string name="home_name">姓名</string>
    <string name="login_fail">登录失败</string>
    <string name="phoneNumber_NotNull">手机号不能为空</string>
    <string name="your_verify">您的验证码为:</string>
    <string name="verifyFail">验证码不正确</string>
    <string name="repeatVerify">重新发送</string>
    <string name="My_card_roll">我的卡卷</string>
    <string name="Purchased_itinerary">已购行程</string>
    <string name="myCollection">我的收藏</string>
    <string name="myfllow">我的关注</string>
    <string name="Contact_customer_service">联系客服</string>
    <string name="suggestion">意见反馈</string>
    <string name="edition">版本检测</string>
    <string name="edit">编辑</string>
    <string name="card">人关注</string>
    <string name="info">个人信息</string>
    <string name="gain">获取途径</string>
    <string name="head">头像</string>
    <string name="userName">用户昵称</string>
    <string name="sex">性别</string>
    <string name="maintain">保密</string>
    <string name="baimi">伴小米</string>
    <string name="sizhibuquan">四肢不全五体不勤</string>
    <string name="specific">个性签名</string>
    <string name="updatepsw">修改密码</string>
    <string name="bindPhone">绑定手机号</string>
    <string name="winddraw">退出登录</string>
    <string name="ok">完成</string>
    <string name="send_again">重新发送</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="skip">进入主页面</string>
    <string name="immediately">立即体验</string>
    <string name="oauth_ok">授权成功</string>
    <string name="wachAll">查看全部评价</string>
    <string name="share">分享</string>
    <string name="collection">收藏</string>
    <string name="collection_fail">收藏失败</string>
    <string name="preview">预览路线</string>
    <string name="cancel">取消</string>
    <string name="aesthetics">邂 逅 生 活 美 学</string>
    <string name="home_travel">旅行</string>
    <string name="detailed">详情</string>
    <string name="all_words">所有留言</string>
    <string name="updateOk">修改完成</string>
    <string name="u">保密</string>
    <string name="follow">关注</string>
    <string name="tread">动态</string>
    <string name="lined">线路</string>
    <string name="moneyunit">元</string>
    <string name="new_speech">更新了一条语音</string>
    <string name="upTread">上传了一个动态</string>
    <string name="have_new_edition">有新的版本，是否需要更新</string>
    <string name="Not_for_the_time_being">稍后再说</string>
    <string name="nowStart">现在更新</string>
    <string name="howeplay">怎样玩</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
</resources>
