<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.MyHomePageActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_58"
        android:background="@color/gFFFFFF"
        android:id="@+id/toolBar"
        >
        <TextView
            android:layout_gravity="center_horizontal"
            android:textColor="@color/g333333"
            android:textSize="@dimen/sp_16"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_19"
            android:text="@string/info"
            />
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gain"
        />
    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_marginTop="@dimen/dp_13"
        android:background="@color/gFFFFFF"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:paddingLeft="@dimen/dp_14"
        >

        <TextView
            android:textColor="@color/g333333"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/head"
            android:textSize="@dimen/sp_14" />
        <ImageView
            android:id="@+id/img"
            android:layout_marginRight="@dimen/dp_14"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_259"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_username"
        android:background="@color/gFFFFFF"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:paddingLeft="@dimen/dp_14"
        >
        <TextView
            android:textColor="@color/g333333"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/userName"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_username"
            android:textColor="@color/g999999"
            android:text="@string/baimi"
            android:textSize="@dimen/sp_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_229" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_sex"
        android:background="@color/gFFFFFF"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:paddingLeft="@dimen/dp_14"
        >

        <TextView
            android:textColor="@color/g333333"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/sex"
            android:textSize="@dimen/sp_14" />
        <TextView
            android:id="@+id/tv_sex"
            android:textColor="@color/g999999"
            android:layout_marginRight="@dimen/dp_14"
            android:text="@string/maintain"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_271"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_specifi"
        android:background="@color/gFFFFFF"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:paddingLeft="@dimen/dp_14"
        >
        <TextView
            android:textColor="@color/g333333"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/specific"
            android:textSize="@dimen/sp_14" />
        <TextView
            android:id="@+id/tv_specifi"
            android:textColor="@color/g999999"
            android:text="@string/sizhibuquan"
            android:textSize="@dimen/sp_14"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/dp_14"
            android:layout_marginLeft="@dimen/dp_159"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17" />
    </LinearLayout>
    <LinearLayout
       android:layout_marginTop="@dimen/dp_23"
        android:background="@color/gFFFFFF"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:paddingLeft="@dimen/dp_14"
        >
        <TextView
            android:textColor="@color/g333333"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_gravity="center"
            android:text="@string/updatepsw"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
    <LinearLayout
        android:background="@color/gFFFFFF"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:paddingLeft="@dimen/dp_14"
        >
        <TextView
            android:textColor="@color/g333333"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_gravity="center"
            android:text="@string/bindPhone"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_back"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/gFFFFFF"
        android:text="@string/winddraw"
        android:layout_marginTop="@dimen/dp_28"
        android:layout_width="@dimen/dp_330"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:background="@drawable/homepage"
        />
</LinearLayout>