<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_110"
    >
    <ImageView
        android:layout_marginTop="@dimen/dp_3"
        android:id="@+id/phone"
        android:layout_marginLeft="@dimen/dp_30"
        android:background="@mipmap/phone"
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_21" />
    <TextView
        android:layout_marginTop="@dimen/dp_4"
        android:textSize="@dimen/sp_14"
        android:layout_marginLeft="@dimen/dp_10"
        android:id="@+id/addnum"
        android:text="@string/add86"
        android:layout_toRightOf="@id/phone"
        android:layout_width="@dimen/dp_28"
        android:layout_height="@dimen/dp_20" />
    <ImageView
        android:layout_marginTop="@dimen/dp_13"
        android:layout_toRightOf="@id/addnum"
        android:background="@mipmap/select"
        android:layout_width="@dimen/dp_7"
        android:layout_height="@dimen/dp_5" />
    <EditText
        android:inputType="phone"
        android:maxLength="11"
        android:id="@+id/et_phone"
        android:layout_marginTop="@dimen/dp_3"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_53"
        android:hint="@string/Please_enter_phone_number"
        android:background="@null"
        android:textColor="@color/g373737"
        android:layout_toRightOf="@id/addnum"
        android:layout_width="@dimen/dp_118"
        android:layout_height="@dimen/dp_22" />
    <Button
        android:id="@+id/btn_send_verify_code"
        android:textColor="@color/gFEFEFE"
        android:gravity="center"
        android:textSize="@dimen/sp_14"
        android:text="@string/send_verification_code"
        android:background="@mipmap/button_unavailable"
        android:layout_marginLeft="@dimen/dp_263"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_30" />
    <View
        android:id="@+id/line"
        android:layout_centerInParent="true"
        android:layout_below="@id/phone"
        android:layout_width="@dimen/dp_335"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorAccent">
    </View>
    <RelativeLayout
        android:id="@+id/middle"
        android:layout_below="@id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_267"
        android:layout_centerInParent="true"
        >
        <ImageView
            android:layout_marginRight="@dimen/dp_5"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"
            android:layout_centerInParent="true"
            android:background="@drawable/gra_a9_d8"
            android:layout_toLeftOf="@id/or"
            />
        <ImageView
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"
            android:layout_centerInParent="true"
            android:background="@drawable/gra_d8_a9"
            android:layout_toRightOf="@id/or"
            />
        <TextView
            android:id="@+id/or"
            android:textSize="@dimen/sp_14"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            />
        <ImageView
            android:layout_marginTop="@dimen/dp_12"
            android:id="@+id/wechat_login"
            android:background="@mipmap/wechat"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_below="@id/or"
            />
        <TextView
            android:layout_marginRight="@dimen/dp_20"
            android:layout_below="@id/or"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/umeng_socialize_qq"
            android:id="@+id/tv_qq"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_toLeftOf="@id/wechat_login"
            />
        <TextView
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_below="@id/or"
            android:layout_marginTop="@dimen/dp_12"
            android:id="@+id/tv_weibo"
            android:background="@drawable/umeng_socialize_sina"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_toRightOf="@id/wechat_login"
            />
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/sp_12"
            android:layout_centerInParent="true"
            android:layout_below="@id/wechat_login"
            android:text="@string/wechat_login"
            android:layout_width="@dimen/dp_51"
            android:layout_height="@dimen/dp_17"
            android:textColor="@color/g4DAE46"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_209"
        android:layout_height="@dimen/dp_18"
        android:layout_below="@id/middle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_110"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Login_or_registration"
            android:textSize="@dimen/sp_13" />

    </LinearLayout>
</RelativeLayout>
